--- a/ABOUT.HTM
+++ b/ABOUT.HTM
@@ -9,7 +9,7 @@
 
 </p> <BODY LANG="en-US" DIR="LTR"> <H1>What is the PHP/Java
 Bridge?</H1> <P><FONT > The PHP/Java Bridge
-  is an optimized, XML-based network protocol which can be used to connect a native script engine with a Java or <a href="http://www.ecma-international.org/publications/standards/Ecma-335.htm">ECMA 335</a> virtual machine. It is more than 50 times faster than local RPC via SOAP, uses less resources on the web-server side and it is faster and more reliable than a communication via the Java Native Interface.</p>
+  is an optimized, XML-based network protocol which can be used to connect a native script engine with a Java or <a href="http://www.ecma-international.org/publications/standards/Ecma-335.htm">ECMA 335</a> virtual machine. It is more than 50 times faster than local RPC via SOAP, requires less resources on the web-server side and it is faster and more reliable than a communication via the Java Native Interface.</p>
 <p>
 
 The <a href="documentation/PHP-API/html/java_8c.html">php java
@@ -30,8 +30,8 @@ back-end, if needed.
 <p><FONT > Each request-handling PHP process of a multi-process HTTP
 server communicates with a corresponding thread spawned by the VM.
 Requests from more than one HTTP server may either be routed to an
-application server running the PHP/Java Bridge or each HTTP server may
-own a PHP/Java Bridge and communicate with a J2EE Java application
+application server running the PHP/Java Bridge back end or each HTTP server may
+own a PHP/Java Bridge back end and communicate with a J2EE Java application
 server by exchanging Java value objects; the necessary client-stub
 classes (ejb client .jar) can be loaded at run-time.  </FONT></P>
 
